# devops-hands-on-project-hivebox

./: .dockerignore  Dockerfile  README.md  SECURITY.md  app.py  pyproject.toml  sensebox_service.py  sonar-project.properties  temperature_utils.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  scorecard.yml  semgrep.yml  sonarqube.yml  terrascan.yml
k8s/cluster/: kind-config.yaml
k8s/helm/traefik/: values.yaml
k8s/manifests/app/: configmap.yaml  deployment.yaml  service.yaml
k8s/manifests/gateway/: gateway-class.yaml  gateway.yaml  httproute.yaml
k8s/manifests/ingress/: ingress.yaml
src/: app.py  sensebox_service.py  temperature_utils.py
tests/: test_api.py
tests/integration/: test_api_integrations.py
tests/unit/: test_api_units.py
