[project]
name = "devops-hands-on-project-hivebox"
version = "0.4.0"
description = "A scalable RESTful API built around openSenseMap but customized to help beekeepers with their chores."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
